// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChoiceFeedbackBlock > renders empty element when no message string 1`] = `
<div
  class="qti-interaction"
  tabindex="-1"
>
  <div
    class="qti-instruction-container"
    dir=""
  >
    
  </div>
  
  
</div>
`;

exports[`ChoiceFeedbackBlock > renders invalid feedback correctly 1`] = `
<div
  class="qti-interaction"
  tabindex="-1"
>
  <div
    class="qti-instruction-container"
    dir=""
  >
    <div
      aria-atomic="true"
      class="feedback warning fullwidth"
      role="alert"
    >
      
       
      <p>
        You must make exactly 2 associations - Currently 1
      </p>
    </div>
    
  </div>
  
  
</div>
`;

exports[`ChoiceFeedbackBlock > renders valid feedback correctly 1`] = `
<div
  class="qti-interaction"
  tabindex="-1"
>
  <div
    class="qti-instruction-container"
    dir=""
  >
    <div
      aria-atomic="true"
      class="feedback info fullwidth"
      role="status"
    >
      
       
      <p>
        You must pick a maximum of 1 choice - Currently 1
      </p>
    </div>
    
  </div>
  
  
</div>
`;
